Improve the markdown conversion and cleanup method used when saving a qt, to make sure the markdown has no html in it. Revert the `use div as a wrapper element` change in textAngular, because `toMarkdown` does not add a newline after it. Use the standard p element, and hide the margin with css, only in the Options editor. Wrap the inserted template in contenteditables in divs, so that `marked` does not wrap lines in p's.

--- a/src/background/css/editor.styl
+++ b/src/background/css/editor.styl
@@ -68,3 +68,13 @@ toolbar-bg = #f8f8f8;
     padding: emCalc(3) emCalc(12);
 }
 
+/* we need to still use paragraphs as element wrappers 
+ * so that textAngular turns them into newlines.
+ * TODO once
+ * https://github.com/domchristie/to-markdown/issues/49
+ * is merged, we can use divs.
+ */
+
+.qt-editor [contenteditable] p {
+    margin: 0;
+}
